# api/controllers/next.js
@@ -4,8 +4,11 @@ const models = require('questionnaire-models');
 const Questionnaire = models.Questionnaire;
 const Session = models.Session;
 const async = require('async');
-const sessionIdCreator = require('../../lib/sessionIdCreator');
 const objectPath = require('simple-object-path');
+const log4js = require('log4js');
+const logger = log4js.getLogger();
+//log4js requires to turn on logging
+logger.level = 'debug';
 
 //TODO
 /*
@@ -18,17 +21,17 @@ const next = (req, res)=>{
   const question = objectPath(req,'swagger/params/body/value');
   let _answeredQuestionsMap = {};
   let _nextQuestion;
-  let _messsage;
+  let _message;
 
   //store session answer and set questions answered
   const storeAnswerToSession = (_callback)=>{
     const query = {id : sessionId};
-    Session.findOne((err, session)=>{
+    Session.findOne(query, (err, session)=>{
         if(err)return _callback(err);
         if(session){
           session.questions.forEach(q=>{return _answeredQuestionsMap[q.questionId]=true;});
           if(!_answeredQuestionsMap[question.questionId]){
-            session.questions.push({questionId : question.questionId, answer : question.answerId});
+            session.questions.push({questionId : question.questionId, answerId : question.answerId});
             _answeredQuestionsMap[question.questionId]=true;
             session.save(sessionError=>{
               if(sessionError)return _callback(sessionError);
@@ -38,13 +41,13 @@ const next = (req, res)=>{
             return _callback();
           }
         }else{
-          return _callback();
+          return _callback(new Error(`User Session Id is not valid --> ${sessionId}`));
         }
     });
   };
 
   //get next Questionnaire's questions
-  const get_nextQuestion = (_callback)=>{
+  const getNextQuestion = (_callback)=>{
     const query = {_id : questionnaireId};
     Questionnaire
       .findOne(query)
@@ -56,7 +59,7 @@ const next = (req, res)=>{
            if(questions.length > 0){
              _nextQuestion = questions[0];
            }else{
-             _messsage = `End of Questionnaire`;
+             _message = `End of Questionnaire`;
            }
          }
          return _callback();
@@ -64,12 +67,13 @@ const next = (req, res)=>{
   };
 
   //use async for flow control
-  async.series([storeAnswerToSession, get_nextQuestion], (err)=>{
+  async.series([storeAnswerToSession, getNextQuestion], (err)=>{
     if(err){
       logger.error(`Issue in Next Api ${err.message}`);
+      if(err.message.includes(`User Session Id is not valid`))return res.status(401).send({message: err.message});
       return res.status(500).send({message: err.message})
     }
-    return res.status(200).send({question : _nextQuestion, message : _messsage});
+    return res.status(200).send({question : _nextQuestion, message : _message});
   });
 }
 
